# promotezworks

./: .gitignore  README.md  index.html  tos.html
.github/workflows/: deploy.yml
assets/: index-BOSjEVYD.css  index-BUnxNWJB.js  index-KXeL9SSn.js  index-kw207rPd.js
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: privacy.html
frontend/src/: App.css  App.tsx  Aurora.tsx  CardNav.css  CardNav.tsx  Counter.tsx  FlowingMenu.tsx  ReflectiveCard.css  ReflectiveCard.tsx  ScrollStack.css  ScrollStack.tsx  TextType.tsx  index.css  main.tsx
frontend/src/components/: DevConsole.tsx  StatusIndicator.tsx  SystemTelemetry.tsx  WorkspaceView.tsx  pointer-highlight-demo.tsx
